Arreglar Dockerfile para build exitoso

--- a/easypanel.yml
+++ b/easypanel.yml
@@ -9,6 +9,7 @@ services:
     build:
       type: dockerfile
       dockerfile: Dockerfile
+      context: .
     deploy:
       replicas: 1
       env:
